--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 @import "partials/_variables.scss";
 @import "partials/_common.scss";
 @import "partials/_mixins.scss";
