--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -10,7 +10,7 @@ header{
             a{
                 text-decoration: none;
                 font-weight: bold;
-                color: rgb(0,45,117);
+                color: $blue;
             }
             a:hover {
                 color: #0080FF;
