--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -1,11 +1,11 @@
 main{
-    background-image: url("https://img.pixers.pics/pho_wat(s3:700/FO/66/57/13/32/700_FO66571332_d43163059589e393bd4f774b441303f4.jpg,700,467,cms:2018/10/5bd1b6b8d04b8_220x50-watermark.png,over,480,417,jpg)/carte-da-parati-spighe-di-grano-nel-campo-su-sfondo-bianco.jpg.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-image: url("https://img.freepik.com/foto-gratuito/concetto-di-tovaglia-a-quadri-decorazione-rosso_53876-31714.jpg?size=626&ext=jpg");
+    background-repeat: round;
+    background-size: contain;
     padding: 50px;
     h2{
         font-weight: bold;
-        color: rgb(0,45,117);
+        color: black;
     }
     .cards{
         display: flex;
@@ -25,10 +25,11 @@ main{
                 width: 350px;
             }
             img:hover{
-                border: 3px solid rgb(0,45,117);
+                border: 3px solid $blue;
             }
             img:hover h3{
                 display: block;
+                z-index: 10;
             }
         }
     }
