--- a/resources/sass/partials/_common.scss
+++ b/resources/sass/partials/_common.scss
@@ -5,3 +5,23 @@
     box-sizing: border-box;
     font-family: $font;
 }
+
+h2{
+    font-weight: bold;
+    color: black;
+}
+
+ul{
+    list-style: none;
+    li{
+        margin: 10px;
+        a{
+            text-decoration: none;
+            font-weight: bold;
+            color: $blue;
+        }
+        a:hover {
+            color: #0080FF;
+          }
+    }
+}
